# kongali-security

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  GOVERNANCE.md  LEARNING_PATH.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  add_netstat_cli.py  add_netstat_handler.py  baseline.json  comparison.json  hostinger-report.html  hostinger-report.json  hostinger-report.md  hostinger-report.sarif  kongali1720-report.html  kongali1720-report.json  kongali1720-report.md  module-results.sarif  pretty-sarif.json  pyproject.toml  report.html  security.yml  targets.txt  tls-result.json  unified-assessment.json  unified-assessment.md  unified-assessment.sarif
.github/: dependabot.yml  pull_request_template.md
.github/.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml  kongali-security-code-scanning.yml  security-regression.yml  security.yml
kongali_security/: __init__.py  cli.py  cli.py.backup-assess
kongali_security/analysis/: assessment.py  assessment.py.backup-finding-normalization  assessment.py.backup-normalize  audit.py  baseline.py  batch.py  compare.py  cookies.py  cors.py  csp.py  cvss.py  dns.py  hash.py  headers.py  ioc.py  ip.py  knowledge.py  methods.py  owasp.py  password.py  pdf_report.py  redirect.py  report.py  report.py.bak  risk.py  robots.py  scan.py  scan.py.bak  securitytxt.py  tech.py  tls.py  url.py  url.py.bak  waf.py  whois.py
kongali_security/assessment/: __init__.py  compliance.py  executive_summary.py  recommendations.py  scoring.py
kongali_security/core/: __init__.py  engine.py
kongali_security/network/: __init__.py  netstat.py  ports.py
kongali_security/reporting/: __init__.py  executive.py  executive_html.py  executive_markdown.py  executive_pdf.py
kongali_security/schemas/: __init__.py  finding.py
security-report/: comparison.json
tests/: test_assessment.py  test_audit.py  test_cli.py  test_compare.py  test_cvss.py  test_export.py  test_hash.py  test_ioc.py  test_netstat.py  test_report.py  test_tls.py  test_url.py  test_whois.py
