[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "kongali-security"
version = "0.1.0"
description = "Open-source cybersecurity and security automation framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "KONGALI1720" }
]

maintainers = [
    { name = "KONGALI1720" }
]

keywords = [
    "cybersecurity",
    "security",
    "security-automation",
    "threat-intelligence",
    "ioc",
    "osint",
    "network-security",
    "security-analysis",
    "incident-response",
    "python",
    "ai-security"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.7",
    "dnspython>=2.6",
    "requests>=2.32"
]


[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.1"
]

security = [
    "bandit>=1.7",
    "pip-audit>=2.7"
]

all = [
    "kongali-security[dev,security]"
]


[project.urls]
Homepage = "https://github.com/kongali1720/kongali-security"
Repository = "https://github.com/kongali1720/kongali-security"
Issues = "https://github.com/kongali1720/kongali-security/issues"
Documentation = "https://github.com/kongali1720/kongali-security#readme"
Changelog = "https://github.com/kongali1720/kongali-security/blob/main/CHANGELOG.md"


[project.scripts]
kongali-security = "kongali_security.cli:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = [
    "kongali_security",
    "kongali_security.*"
]


[tool.pytest.ini_options]
minversion = "8.0"

testpaths = [
    "tests"
]

python_files = [
    "test_*.py",
    "*_test.py"
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=kongali_security",
    "--cov-report=term-missing",
    "--cov-report=xml"
]


[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__"
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM"
]

ignore = [
    "E501"
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

exclude = [
    "tests"
]


[tool.coverage.run]
branch = true
source = [
    "kongali_security"
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError"
]
