[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "kongali-security"
version = "0.1.0"
description = "Open-source cybersecurity and security automation framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "KONGALI" }
]

keywords = [
    "cybersecurity",
    "security",
    "security-automation",
    "threat-intelligence",
    "osint",
    "ioc",
    "security-analysis",
    "security-monitoring"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

dependencies = []


[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7"
]


[project.urls]
Homepage = "https://github.com/kongali1720/kongali-security"
Repository = "https://github.com/kongali1720/kongali-security"
Issues = "https://github.com/kongali1720/kongali-security/issues"


[project.scripts]
kongali-security = "kongali_security.cli:main"


[tool.setuptools.packages.find]
where = ["."]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

python_files = [
    "test_*.py",
    "*_test.py"
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]


[tool.coverage.run]
branch = true
source = [
    "kongali_security"
]


[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0


[tool.ruff]
line-length = 88
target-version = "py310"

exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist"
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM"
]

ignore = []


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
