[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "kongali-security"
version = "0.1.0"
description = "Open-source cybersecurity and security automation framework focused on defensive security analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "KONGALI1720" }
]

keywords = [
    "cybersecurity",
    "security",
    "security-automation",
    "threat-intelligence",
    "ioc",
    "osint",
    "network-security",
    "defensive-security",
    "security-analysis",
    "python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

dependencies = []


[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<5",
    "build>=1.2,<2",
    "twine>=5,<7",
]


[project.scripts]
kongali-security = "kongali_security.cli:main"


[project.urls]
Homepage = "https://github.com/kongali1720/kongali-security"
Repository = "https://github.com/kongali1720/kongali-security"
Issues = "https://github.com/kongali1720/kongali-security/issues"
Documentation = "https://github.com/kongali1720/kongali-security/tree/main/docs"
Changelog = "https://github.com/kongali1720/kongali-security/blob/main/CHANGELOG.md"
Security = "https://github.com/kongali1720/kongali-security/blob/main/SECURITY.md"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = [
    "kongali_security",
    "kongali_security.*"
]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

python_files = [
    "test_*.py",
    "*_test.py"
]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]

filterwarnings = [
    "error"
]


[tool.coverage.run]
branch = true
source = [
    "kongali_security"
]


[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70


[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist"
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "S"
]

ignore = [
    "E501"
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101"
]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true


[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv"
]

skips = [
    "B101"
]
